Update package description text.

--- a/README.Rmd
+++ b/README.Rmd
@@ -16,8 +16,9 @@ knitr::opts_chunk$set(
 [![Travis-CI Build Status](https://travis-ci.org/leonawicz/snapclim.svg?branch=master)](https://travis-ci.org/leonawicz/snapclim)
 [![AppVeyor Build Status](https://ci.appveyor.com/api/projects/status/github/leonawicz/snapclim?branch=master&svg=true)](https://ci.appveyor.com/project/leonawicz/snapclim)
 [![Coverage Status](https://img.shields.io/codecov/c/github/leonawicz/snapclim/master.svg)](https://codecov.io/github/leonawicz/snapclim?branch=master)
-  
-The `snapclim` package provides access to a collection of curated, publicly available climate data sets
+
+
+The `snapclim` package provides access to curated collections of public climate data sets 
 offered by Scenarios Network for Alaska and Arctic Planning (SNAP) at the University of Alaska Fairbanks.
 `snapclim` interfaces with SNAP's Amazon Web Services cloud storage to retrieve specific climate data.
 Available data includes historical observation-based data as well as historical and projected climate model outputs.
