--- a/README.Rmd
+++ b/README.Rmd
@@ -39,7 +39,7 @@ daily point location climate projections.
 
 ## SNAPverse context
 
-`snapclim` is a member package in the data sector of the SNAPverse.
+`snapclim` is a member package in the data sector of the [SNAPverse](https://leonawicz.github.io/snapverse/) collection of R packages.
 Data packages typically include raw data sets in support of other R packages.
 `snapclim` is technically more like a typical R package. Instead of storing local copies of data sets,
 it contains functions for accessing external data sets that would be too large to store conveniently even in an 
@@ -55,4 +55,12 @@ You can install snapclim from github with:
 ```{r gh-installation, eval = FALSE}
 # install.packages("devtools")
 devtools::install_github("leonawicz/snapclim")
+```
+
+```{r is_md, echo = FALSE}
+is_md <- knitr::opts_knit$get("rmarkdown.pandoc.to") == "markdown_github-ascii_identifiers"
+```
+
+```{r md_pkg_ref, echo = FALSE, results = "asis", eval = is_md}
+cat('## Reference\n\n[Complete package reference and function documentation](https://leonawicz.github.io/snapclim/)')
 ```
