--- a/README.Rmd
+++ b/README.Rmd
@@ -16,6 +16,9 @@ knitr::opts_chunk$set(
 [![AppVeyor Build Status](https://ci.appveyor.com/api/projects/status/github/leonawicz/snapclim?branch=master&svg=true)](https://ci.appveyor.com/project/leonawicz/snapclim)
 [![Coverage Status](https://img.shields.io/codecov/c/github/leonawicz/snapclim/master.svg)](https://codecov.io/github/leonawicz/snapclim?branch=master)
 
+## SNAPverse R package ecosystem development frozen.
+
+*Development of the SNAPverse R package ecosystem has been frozen indefinitely. This project was never directly funded. I began it out of personal interest, but no longer work for SNAP. It will remain archived here for historical reference.*
 
 The `snapclim` package provides access to curated collections of public climate data sets 
 offered by Scenarios Network for Alaska and Arctic Planning (SNAP) at the University of Alaska Fairbanks.
